 + 07Nov2019 Adds environment variable EXTRAE_UNSET_PRELOAD to clear the LD_PRELOAD once the tracing is loaded
 * 25Oct2019 Fixes double emission of python events call and c_call
 * 10Sep2019 Fixes configure check for MPI_Comm_spawn
 + 17Jul2019 Adds Python bindings for Extrae_shutdown and _restart
 * 16Jul2019 Fixes correlation of PEBS samples with reallocated objects
 * 05Jul2019 Fixes bug in MPI_Test & MPI_Imrecv where the request is not properly copied for later processing
 * 21Jun2019 Fixes potentially incomplete paths in Makefiles (closes #22)
 * 13Jun2019 Adds support to read MPI task identifier from `PBS` environment variables
 * 12Jun2019 Guards the definition of SaveMessage and ProcessMessage only under MPI3
 * 11Jun2019 Replaces request's hash table for a new implementation 
 * 11Jun2019 Fixes bug in MPI_Wait where the input request is not copied for later processing
 * 25Apr2019 Fixes race conditions between thread creations and PEBS samples 
 * 17Apr2019 Fixes bug in pebs sampling store misses identification
 * 03Jun2019 Increases static buffer for `calloc` to 8MB
 * 03Jun2019 Fixes libbfd detection in native arm64 machines
 * 03Jun2019 Fixes Dyninst URL
 * 02Apr2019 Adds support for changing num_threads in OpenMP parallel constructs
 * 29Mar2019 Changes order in which MPI env vars are checked to discover process' task id during auto init
 * 28Mar2019 Extends support for PEBS sampling on Skylake processors, xml 'period' attribute changed to 'frequency'
 + 27Mar2019 Adds missing user_lock routines in kmp runtime
 * 27Mar2019 Removes warnings for ambiguous `if` and non-std99 compliant `for`
 * 27Mar2019 Fixes incorrect states for MPI_Win_flush_* calls
 * 27Mar2019 Breaks infinite loop in signal handler (closes #19)
 * 26Mar2019 Installs Python modules only if their support is enabled by `configure`
 * 26Mar2019 Fixes bug in configure mis-detecting libiberty even if it is not available (closes #7)